# Confidence-Scorer-Agent

./: .env.example  README.md  pyproject.toml
confidence_scorer/: cli.py  config.py
confidence_scorer/agent/: nodes.py  orchestrator.py  state.py
confidence_scorer/analysis/: claim_extractor.py  confidence.py  stance_classifier.py
confidence_scorer/llm/: gateway.py  models.py
confidence_scorer/output/: report.py
confidence_scorer/tools/: arxiv_search.py  base.py  reader.py
confidence_scorer/tools/web_search/: __init__.py  bing.py  brave.py  duckduckgo.py  google.py  providers.py  tavily.py
examples/: basic_query.py
tests/: test_arxiv_search.py  test_claim_extractor.py  test_confidence.py  test_reader.py  test_report.py  test_stance_classifier.py  test_state_models.py  test_web_search.py
